--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 </nav>
 
 <!--- Image Slider -->
-<div id="slides" class="carousel slide" data-ride="carousel" data-touch="">
+<div id="slides" class="carousel slide" data-ride="carousel" data-touch="true">
 	<ul class="carousel-indicators">
 		<li data-target="#slides" data-slide-to="0" class="active"></li>
 		<li data-target="#slides" data-slide-to="1"></li>
