--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
 </nav>
 
 <!--- Image Slider -->
-<div id="slides" class="carousel slide" data-touch="true">
-	<ul class="carousel-indicators">
+<div id="slides" class="carousel slide" data-ride="carousel" data-touch="true">
+	<ol class="carousel-indicators">
 		<li data-target="#slides" data-slide-to="0" class="active"></li>
 		<li data-target="#slides" data-slide-to="1"></li>
 		<li data-target="#slides" data-slide-to="2"></li>
-	</ul>
+	</ol>
 	<div class="carousel-inner">
 		<div class="carousel-item active">
 			<img src="img/background.png">
